# gencon

./: .gitignore  README.md  app.py  app.yaml  package-lock.json  pyproject.toml  requirements.txt
deployment_docs/: DEPLOYMENT.md  DEPLOYMENT_WORKSPACE.md  deploy_genie_force.py
docs/: DEPLOYMENT.md  DEPLOYMENT_WORKSPACE.md  deploy_genco.py  deploy_genie_force.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  store.ts
frontend/src/pages/: CatalogExplorer.tsx  CreateRoom.tsx  EditRoom.tsx  GenieChat.tsx  GenieRooms.tsx  SampleDataGenerator.tsx  Services.tsx  Setup.tsx  SupervisorChat.tsx
server/: config.py  db.py
server/routes/: analysis.py  cache.py  catalog.py  chat_history.py  genie.py  sample_data.py  saved_questions.py  semantic_cache.py  supervisor.py  user.py  warehouses.py  workspace_files.py
server/semantic_cache/: __init__.py  cache.py  embeddings.py  setup.py
